[package]
name= "erase"
version = "4.0.0"
authors = ["Darren Ldl <darrenldldev@gmail.com>"]
edition = "2018"
build = "build.rs"
exclude = [
    "appveyor.yml",
    ".travis.yml"
]

description = "Rust implementation of Reed-Solomon erasure coding"

documentation = "https://docs.rs/erase"
homepage= "https://github.com/tetcoin/erase"
repository= "https://github.com/tetcoin/erase"

readme= "README.md"

keywords= ["reed-solomon", "erasure"]

categories= ["encoding"]

license = "MIT"

[features]
default = [] # simd off by default
simd-accel = ["cc", "libc"]

[badges]
travis-ci = { repository = "tetcoin/erase" }
appveyor= { repository = "tetcoin/erase" }
codecov = { repository = "tetcoin/erase" }
coveralls = { repository = "tetcoin/erase" }

[dependencies]
smallvec = "0.6"
libc = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.5.4"
quickcheck = "0.7"

[build-dependencies]
cc = { version = "1.0", optional = true }
